[TASK] Use HTML5 Boilerplate has default Page Template
- Remove demo Organisms

--- a/Resources/Private/Styles/Site.scss
+++ b/Resources/Private/Styles/Site.scss
@@ -1,7 +1,9 @@
 
 // Globals
 @import "Plugins/Normalize";
-@import "Plugins/Plugins";
+@import "Plugins/bourbon/bourbon";
+@import "Plugins/base/base";
+@import "Plugins/neat/neat";
 
 // Atoms
 
@@ -10,9 +12,8 @@
 
 
 // Organisms
-@import "Organisms/Footer";
-@import "Organisms/Navigation";
-@import "Organisms/ScrollableArticle";
+
 
 // Layouts
-@import "Layouts/Home";
+
+
